Update foundraise link

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <p>
         <small>
           <ul>
-            <li><a href="https://www.betterplace.org/en/fundraising-events/29774-larsenwork-paying-it-forward-ethiopian-charities" target="_blank">Donate</a> to a Ethiopian charity</li>
+            <li><a href="https://www.crowdrise.com/larsenwork-paying-it-forward" target="_blank">Donate</a> to a Ethiopian charity</li>
             <li><a href="https://twitter.com/intent/tweet?text=Font:+Gidole+-+a+highly+recommended+open+source+modern+DIN+by+@larsenwork&url=https%3A%2F%2Fgidole.github.io" target="_blank">Tweet</a> and help spread the word</li>
             <li><a href="https://github.com/larsenwork/Gidole" target="_blank">Star on Github</a>—currently 7th on <a href="https://github.com/showcases/fonts?s=stars" target="_blank">this list</a> thanks to you!</li>
           </ul>
